# Raytracer-Tools

./: .gitignore  CMakeLists.txt  README.md  bitbucket-pipelines.yml
lib/: CMakeLists.txt
lib/camera/: camera.cc
lib/canvas/: CMakeLists.txt  canvas.cc
lib/color/: CMakeLists.txt  color.cc
lib/include/: canvas.hh  constants.hh  intersection.hh  material.hh  matrix.hh  pattern.hh  plane.hh  sphere.hh  world.hh
lib/intersection/: CMakeLists.txt  intersection.cc
lib/light/: CMakeLists.txt
lib/material/: CMakeLists.txt  material.cc
lib/matrix/: matrix.cc
lib/pattern/: pattern.cc
lib/sphere/: CMakeLists.txt  sphere.cc
lib/tuple/: tuple.cc
lib/world/: world.cc
offside/: CMakeLists.txt
offside/3DSphere/: CMakeLists.txt  main.cc
offside/PlaneWorld/: CMakeLists.txt  main.cc
offside/cannon/: CMakeLists.txt  main.cc
offside/clock/: CMakeLists.txt  main.cc
offside/shadow_sphere/: CMakeLists.txt  main.cc
src/: CMakeLists.txt  constants.hh
src/camera/: CMakeLists.txt  camera.cc  camera.hh
src/canvas/: CMakeLists.txt  canvas.cc  canvas.hh
src/colors/: CMakeLists.txt  color.cc  color.hh
src/intersection/: CMakeLists.txt  intersection.cc  intersection.hh
src/light/: CMakeLists.txt  light.cc  light.hh
src/material/: CMakeLists.txt  material.cc  material.hh
src/matrix/: CMakeLists.txt  matrix.cc  matrix.hh
src/pattern/: CMakeLists.txt  pattern.cc  pattern.hh
src/plane/: CMakeLists.txt  plane.cc  plane.hh
src/ray/: CMakeLists.txt  ray.cc  ray.hh
src/shape/: CMakeLists.txt  shape.cc  shape.hh
src/sphere/: CMakeLists.txt  sphere.cc  sphere.hh
src/tuple/: CMakeLists.txt  tuple.cc  tuple.hh
src/world/: CMakeLists.txt  world.cc  world.hh
src_offside/: CMakeLists.txt
src_offside/cannon/: CMakeLists.txt
src_offside/clock/: CMakeLists.txt
src_offside/world_and_projectiles/: main.cc
tests/: include.hh  tests.cc  tests_camera.cc  tests_canvas.cc  tests_color.cc  tests_intersection.cc  tests_light.cc  tests_material.cc  tests_matrix.cc  tests_matrix_transformations.cc  tests_pattern.cc  tests_plane.cc  tests_ray.cc  tests_shape.cc  tests_sphere.cc  tests_tuple.cc  tests_world.cc
