add_subdirectory(tuple)
add_subdirectory(colors)
add_subdirectory(canvas)
add_subdirectory(matrix)
add_subdirectory(ray)
add_subdirectory(shape)
add_subdirectory(sphere)
add_subdirectory(intersection)
add_subdirectory(light)
add_subdirectory(material)
add_subdirectory(world)
add_subdirectory(camera)
add_subdirectory(plane)
